# ferropdf

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  benchmark_results.json  block_flow.rs  ferropdf-refactor-instructions.md  pagination.rs  pyproject.toml  table_layout.rs
.github/workflows/: benchmark.yml  ci.yml  release.yml
bench/: benchmark_full.py  compare.py
benchmarks/: benchmark_comparison.py  benchmark_results.md
bindings/python/: Cargo.toml
bindings/python/src/: lib.rs
crates/ferropdf-core/: Cargo.toml
crates/ferropdf-core/src/: dom.rs  error.rs  layout.rs  length.rs  lib.rs  page.rs  style.rs
crates/ferropdf-layout/: Cargo.toml
crates/ferropdf-layout/src/: block_flow.rs  lib.rs  style_to_taffy.rs  table_layout.rs  taffy_bridge.rs  text.rs
crates/ferropdf-page/: Cargo.toml
crates/ferropdf-page/src/: fragment.rs  lib.rs  pagination.rs
crates/ferropdf-parse/: Cargo.toml
crates/ferropdf-parse/src/: html.rs  lib.rs
crates/ferropdf-parse/src/css/: mod.rs  parser.rs
crates/ferropdf-render/: Cargo.toml
crates/ferropdf-render/benches/: render_bench.rs
crates/ferropdf-render/src/: display_list.rs  font_subsetter.rs  lib.rs  painter.rs  pdf.rs  sandbox.rs
crates/ferropdf-style/: Cargo.toml
crates/ferropdf-style/src/: cascade.rs  compute.rs  inherit.rs  lib.rs  matching.rs
dev/bench/: data.js
examples/: basic.py
examples/django_app/: settings.py  views.py
examples/django_app/templates/: dashboard.html  invoice.html  letter.html  receipt.html
examples/fastapi_app/: main.py
examples/fastapi_app/templates/: dashboard.html  invoice.html  letter.html  receipt.html  report.html
rust-engine/: Cargo.toml
rust-engine/benches/: render_bench.rs
rust-engine/bindings/python/: Cargo.toml
rust-engine/bindings/python/src/: engine.rs  errors.rs  functions.rs  lib.rs  types.rs
rust-engine/crates/ferropdf-core/: Cargo.toml
rust-engine/crates/ferropdf-core/src/: lib.rs
rust-engine/crates/ferropdf-layout/: Cargo.toml
rust-engine/crates/ferropdf-layout/src/: box_model.rs  engine.rs  lib.rs  table_layout.rs
rust-engine/crates/ferropdf-page/: Cargo.toml
rust-engine/crates/ferropdf-page/src/: at_page.rs  counters.rs  fragment.rs  lib.rs
rust-engine/crates/ferropdf-parse/: Cargo.toml
rust-engine/crates/ferropdf-parse/src/: lib.rs
rust-engine/crates/ferropdf-parse/src/css/: cascade.rs  compute.rs  inherit.rs  matching.rs  mod.rs  parser.rs  properties.rs  resolver.rs  specificity.rs  ua.css  values.rs
rust-engine/crates/ferropdf-parse/src/html/: dom.rs  mod.rs  parser.rs
rust-engine/crates/ferropdf-render/: Cargo.toml
rust-engine/crates/ferropdf-render/src/: display_list.rs  lib.rs  painter.rs  pdf.rs
rust-engine/src/: bindings.rs
rust-engine/src/css/: mod.rs  parser.rs  properties.rs  selector.rs  stylesheet.rs  values.rs
rust-engine/src/fonts/: metrics.rs  mod.rs  shaping.rs
rust-engine/src/html/: dom.rs  parser.rs
rust-engine/src/images/: mod.rs
rust-engine/src/layout/: box_model.rs  engine.rs  mod.rs  pagination.rs  style_resolver.rs  table_layout.rs
rust-engine/src/pdf/: generator.rs
rust-engine/src/renderer/: paint.rs
rust-engine/src/tailwind/: mod.rs
rust-engine/tests/: integration_test.rs
tests/: test_basic.py  test_security.py
tests/python/: test_integration.py  test_performance.py
