[workspace]
members = [
    "crates/ferropdf-core",
    "crates/ferropdf-parse",
    "crates/ferropdf-style",
    "crates/ferropdf-layout",
    "crates/ferropdf-page",
    "crates/ferropdf-render",
    "bindings/python",
]
resolver = "2"

[workspace.package]
rust-version = "1.85"

[workspace.dependencies]
# HTML — NE PAS écrire de parser HTML maison
html5ever    = "0.27"
markup5ever  = "0.12"

# CSS — NE PAS écrire de parser CSS maison
cssparser    = "0.31"
selectors    = "0.25"

# Layout — NE PAS écrire de moteur de layout maison
taffy        = { version = "0.5", features = ["flexbox", "grid", "block_layout"] }

# Text + Fonts — NE PAS écrire de text shaper maison
cosmic-text  = "0.12"
fontdb       = "0.16"
ttf-parser   = "0.20"

# Images
image        = { version = "0.25", features = ["png", "jpeg", "webp"] }
resvg        = "0.42"
usvg         = "0.42"
tiny-skia    = "0.11"

# PDF output — NE PAS écrire de générateur PDF maison
pdf-writer   = "0.9"
subsetter    = "0.2"

# Utils
thiserror    = "1.0"
url          = "2.5"
id-arena     = "2.2"
hashbrown    = "0.14"
log          = "0.4"
base64       = "0.22"
flate2       = "1.0"

# Python bindings
pyo3         = { version = "0.24", features = ["extension-module"] }

[profile.release]
lto           = true
opt-level     = 3
codegen-units = 1
strip         = true
