[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "ferropdf"
version = "0.1.0"
description = "High-performance PDF generation from HTML/CSS/Tailwind — Rust-powered Python library"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.8"
authors = [
    { name = "Makti Moncef", email = "moncefmak@users.noreply.github.com" }
]
keywords = ["pdf", "html", "css", "tailwind", "rendering", "document", "invoice", "arabic", "rtl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Printing",
    "Framework :: Django",
    "Framework :: FastAPI",
]
dependencies = [
    "jinja2>=3.0",
]

[project.optional-dependencies]
django = ["django>=3.2"]
fastapi = ["fastapi>=0.68", "starlette>=0.14"]
all = ["django>=3.2", "fastapi>=0.68", "starlette>=0.14"]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "weasyprint>=60.0",
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://github.com/MoncefMak/ferropdf"
Documentation = "https://github.com/MoncefMak/ferropdf#readme"
Repository = "https://github.com/MoncefMak/ferropdf"
Issues = "https://github.com/MoncefMak/ferropdf/issues"
Changelog = "https://github.com/MoncefMak/ferropdf/blob/main/CHANGELOG.md"

[tool.maturin]
manifest-path = "rust-engine/Cargo.toml"
python-source = "python-wrapper"
module-name = "fastpdf._engine"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
