[build-system]
requires      = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name            = "ferropdf"
version         = "0.2.1"
description     = "Fast HTML to PDF — Rust-powered, 10x faster than WeasyPrint"
readme          = "README.md"
requires-python = ">=3.8"
license         = { text = "MIT" }
keywords        = ["pdf", "html", "rust", "weasyprint"]

[tool.maturin]
manifest-path = "bindings/python/Cargo.toml"
python-source = "python"
module-name   = "ferropdf._ferropdf"
features      = ["pyo3/extension-module"]
