[package]
name = "fastpdf-engine"
version = "0.1.0"
edition = "2021"
authors = ["FastPDF Contributors"]
description = "High-performance PDF generation engine with HTML/CSS rendering"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MoncefMak/ferropdf"
keywords = ["pdf", "html", "css", "rendering", "document"]
categories = ["rendering", "text-processing"]

[lib]
name = "fastpdf_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.22", features = ["extension-module", "generate-import-lib"] }

# PDF generation
printpdf = { version = "0.7", features = ["embedded_images"] }
lopdf = "0.33"

# HTML/CSS parsing
html5ever = "0.38"
markup5ever = "0.38"
markup5ever_rcdom = "0.38.0+unofficial"
cssparser = "0.34"
selectors = "0.26"

# SVG rendering
resvg = "0.44"
usvg = "0.44"

# Image handling
image = "0.24"

# Font handling
rusttype = "0.9"
fontdb = "0.22"

# Complex text layout (Arabic, Hebrew, etc.)
rustybuzz = "0.18"
unicode-bidi = "0.3"
ttf-parser = "0.24"

# Async and concurrency
rayon = "1.10"
crossbeam = "0.8"
parking_lot = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
once_cell = "1.20"
regex = "1.11"
url = "2.5"
base64 = "0.22"
tempfile = "3.14"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "render_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
