[workspace]
resolver = "2"
members = [
    "crates/ferropdf-core",
    "crates/ferropdf-parse",
    "crates/ferropdf-layout",
    "crates/ferropdf-page",
    "crates/ferropdf-render",
    "bindings/python",
]

[workspace.dependencies]
# Error / logging
thiserror    = "2.0"
log          = "0.4"
env_logger   = "0.11"
once_cell    = "1.20"

# HTML
html5ever             = "0.38"
markup5ever           = "0.38"
markup5ever_rcdom     = "0.38.0+unofficial"

# CSS
cssparser = "0.34"

# Text / Fonts
cosmic-text = "0.12"
ttf-parser  = "0.24"

# Layout
taffy = "0.9"

# Images
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
resvg = "0.44"
usvg  = "0.44"

# PDF
pdf-writer   = "0.14"
miniz_oxide  = "0.8"

# Concurrency
rayon       = "1.10"
parking_lot = "0.12"

# Misc
url = "2.5"

# Python
pyo3 = { version = "0.24", features = ["generate-import-lib", "abi3-py38"] }

# Internal crates
ferropdf-core   = { path = "crates/ferropdf-core" }
ferropdf-parse  = { path = "crates/ferropdf-parse" }
ferropdf-layout = { path = "crates/ferropdf-layout" }
ferropdf-page   = { path = "crates/ferropdf-page" }
ferropdf-render = { path = "crates/ferropdf-render" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "unwind"
