[package]
name    = "ferropdf-layout"
version = "0.2.9"
edition = "2021"
rust-version.workspace = true

[dependencies]
ferropdf-core  = { path = "../ferropdf-core" }
ferropdf-style = { path = "../ferropdf-style" }
taffy          = { workspace = true }
cosmic-text    = { workspace = true }
fontdb         = { workspace = true }
log            = { workspace = true }
