[package]
name    = "ferropdf-render"
version = "0.2.8"
edition = "2021"

[dependencies]
ferropdf-core   = { path = "../ferropdf-core" }
ferropdf-parse  = { path = "../ferropdf-parse" }
ferropdf-style  = { path = "../ferropdf-style" }
ferropdf-layout = { path = "../ferropdf-layout" }
ferropdf-page   = { path = "../ferropdf-page" }
pdf-writer      = { workspace = true }
image           = { workspace = true }
resvg           = { workspace = true }
usvg            = { workspace = true }
tiny-skia       = { workspace = true }
cosmic-text     = { workspace = true }
fontdb          = { workspace = true }
ttf-parser      = { workspace = true }
subsetter       = { workspace = true }
flate2          = { workspace = true }
base64          = { workspace = true }
log             = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "render_bench"
harness = false
