[package]
name    = "ferropdf-style"
version = "0.2.9"
edition = "2021"
rust-version.workspace = true

[dependencies]
ferropdf-core  = { path = "../ferropdf-core" }
ferropdf-parse = { path = "../ferropdf-parse" }
cssparser      = { workspace = true }
selectors      = { workspace = true }
hashbrown      = { workspace = true }
log            = { workspace = true }
